# askap-qc

./: .coveragerc  .gitignore  askap.py  astrometry.py  catalog.py  create_matches.py  crossmatch.py  fileio.py  flux_scale.py  logger.py  matching.py  obs_times.py  pyproject.toml  region.py  rms_hist.py
gw_fields/: SB10463  SB12704  SB13750  SB15191  SB18912  SB18925  SB27379  SB9602  SB9649  SB9910
tests/: test_askap.py  test_catalog.py  test_create_matches.py  test_crossmatch.py  test_fileio.py  test_region.py
tests/data/: RACS_catalogue_test.fits  casda_selavy_file.csv  casda_selavy_file.xml
tests/data/EPOCH05x/COMBINED/STOKESI_IMAGES/: VAST_0012+00A.EPOCH05x.I.conv.fits  VAST_0012+00A.EPOCH05x.I.fits  VAST_0127-73A.EPOCH05x.I.fits
tests/data/EPOCH05x/COMBINED/STOKESI_SELAVY/: VAST_0127-73A.EPOCH05x.I.selavy.components.txt
tests/data/EPOCH08/COMBINED/STOKESI_IMAGES/: VAST_0012+00A.EPOCH08.I.fits  VAST_0127-73A.EPOCH08.I.fits
tests/data/EPOCH08/COMBINED/STOKESI_SELAVY/: VAST_0127-73A.EPOCH08.I.selavy.components.txt
tests/data/EPOCH08/COMBINED/STOKESV_SELAVY/: VAST_0012+00A.EPOCH08.V.selavy.components.txt  VAST_0127-73A.EPOCH08.V.selavy.components.txt
