[tool.poetry]
name = "askap-qc"
version = "0.1.0"
description = ""
authors = ["Joshua <jpri6587@sydney.edu.au>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
astropy = "^4.3.post1"
astroquery = "^0.4.3"
click = "^8.0.1"
pandas = "^1.3.1"
numpy = "^1.21.1"
colorlog = "^5.0.1"
scipy = "^1.7.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
